qt/gen_qeventloop.h

class QEvent;
class QEventLoop;
class QEventLoopLocker;
class QMetaObject;
class QObject;
typedef struct QChildEvent QChildEvent;
typedef struct QEvent QEvent;
typedef struct QEventLoop QEventLoop;
typedef struct QEventLoopLocker QEventLoopLocker;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QThread QThread;
typedef struct QTimerEvent QTimerEvent;
QEventLoop* QEventLoop_new();
QEventLoop* QEventLoop_new2(QObject* parent);
QMetaObject* QEventLoop_metaObject(const QEventLoop* self);
void* QEventLoop_metacast(QEventLoop* self, const char* param1);
int QEventLoop_metacall(QEventLoop* self, int param1, int param2, void** param3);
struct miqt_string QEventLoop_tr(const char* s);
struct miqt_string QEventLoop_trUtf8(const char* s);
bool QEventLoop_processEvents(QEventLoop* self);
void QEventLoop_processEvents2(QEventLoop* self, int flags, int maximumTime);
int QEventLoop_exec(QEventLoop* self);
void QEventLoop_exit(QEventLoop* self);
bool QEventLoop_isRunning(const QEventLoop* self);
void QEventLoop_wakeUp(QEventLoop* self);
bool QEventLoop_event(QEventLoop* self, QEvent* event);
void QEventLoop_quit(QEventLoop* self);
struct miqt_string QEventLoop_tr2(const char* s, const char* c);
struct miqt_string QEventLoop_tr3(const char* s, const char* c, int n);
struct miqt_string QEventLoop_trUtf82(const char* s, const char* c);
struct miqt_string QEventLoop_trUtf83(const char* s, const char* c, int n);
bool QEventLoop_processEvents1(QEventLoop* self, int flags);
int QEventLoop_exec1(QEventLoop* self, int flags);
void QEventLoop_exit1(QEventLoop* self, int returnCode);
bool QEventLoop_override_virtual_metacall(void* self, intptr_t slot);
int QEventLoop_virtualbase_metacall(void* self, int param1, int param2, void** param3);
bool QEventLoop_override_virtual_event(void* self, intptr_t slot);
bool QEventLoop_virtualbase_event(void* self, QEvent* event);
bool QEventLoop_override_virtual_eventFilter(void* self, intptr_t slot);
bool QEventLoop_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
bool QEventLoop_override_virtual_timerEvent(void* self, intptr_t slot);
void QEventLoop_virtualbase_timerEvent(void* self, QTimerEvent* event);
bool QEventLoop_override_virtual_childEvent(void* self, intptr_t slot);
void QEventLoop_virtualbase_childEvent(void* self, QChildEvent* event);
bool QEventLoop_override_virtual_customEvent(void* self, intptr_t slot);
void QEventLoop_virtualbase_customEvent(void* self, QEvent* event);
bool QEventLoop_override_virtual_connectNotify(void* self, intptr_t slot);
void QEventLoop_virtualbase_connectNotify(void* self, QMetaMethod* signal);
bool QEventLoop_override_virtual_disconnectNotify(void* self, intptr_t slot);
void QEventLoop_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QEventLoop_delete(QEventLoop* self);
QEventLoopLocker* QEventLoopLocker_new();
QEventLoopLocker* QEventLoopLocker_new2(QEventLoop* loop);
QEventLoopLocker* QEventLoopLocker_new3(QThread* thread);
void QEventLoopLocker_delete(QEventLoopLocker* self);